versioned_docs/version-4.5/index.mdx
---
title: Harper Docs
---

import CustomDocCardList from '@site/src/components/CustomDocCardList';

# Harper Docs

:::info

### Get the Most Out of Harper

Join our Discord to access expert support, collaborate with Harper’s core team, and stay up to date on the latest platform updates. [Join Our Discord →](https://discord.gg/VzZuaw3Xay)
:::

Welcome to the Harper Documentation! Here, you'll find all things Harper, and everything you need to get started, troubleshoot issues, and make the most of our platform.

## Getting Started

<CustomDocCardList
	columns={3}
	items={[
		{
			type: 'link',
			href: '/docs/getting-started/installation',
			label: 'Install Harper',
			description: 'Pick the installation method that best suits your environment',
		},
		{
			type: 'link',
			href: '/docs/foundations/harper-architecture',
			label: 'Harper Architecture',
			description: 'Learn about what Harper is composed of, and how they work together',
		},
		{
			type: 'link',
			href: '/docs/foundations/core-concepts',
			label: 'Harper Concepts',
			description: "Learn about Harper's fundamental concepts and how they interact",
		},
	]}
/>

## Building with Harper

<CustomDocCardList
	columns={3}
	items={[
		{
			type: 'link',
			href: 'developers/applications/',
			label: 'Harper Applications',
			description: 'Build your a fully featured Harper Component with custom functionality',
		},
		{
			type: 'link',
			href: 'developers/rest',
			label: 'REST Queries',
			description: 'The recommended HTTP interface for data access, querying, and manipulation',
		},
		{
			type: 'link',
			href: 'developers/operations-api/',
			label: 'Operations API',
			description: 'Configure, deploy, administer, and control your Harper instance',
		},
		{
			type: 'link',
			href: 'developers/replication/',
			label: 'Clustering & Replication',
			description:
				'The process of connecting multiple Harper databases together to create a database mesh network that enables users to define data replication patterns.',
		},
		{
			type: 'link',
			href: 'administration/harper-studio/',
			label: 'Explore the Harper Studio',
			description:
				'The web-based GUI for Harper. Studio enables you to administer, navigate, and monitor all of your Harper instances in a simple, user friendly interface.',
		},
	]}
/>
